<resources>
    <string name="app_name">AndroidTask</string>
    <string name="error_happened">Error Happened in adding info</string>
    <string name="adding_successfully">User is added Successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Name</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job">Job Title</string>
    <string name="man">Man</string>
    <string name="female">Woman</string>
    <string name="save_changes">Save</string>
    <string name="no_result">No Result</string>
    <string name="name_required">Name is Required</string>
    <string name="age_is_required">age is Required</string>
    <string name="job_title_is_required">Job Title is Required</string>
    <string name="gender_required">Gender is Required</string>
    <string name="add_user">Add User</string>
    <string name="get_user">Get User</string>
</resources>