<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardButton"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".auth.LoginFragment">

            <TextView
                android:text="@string/your_name"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:minHeight="55dp"
                    android:layout_height="wrap_content">

                    <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/userNameEditText"
                        android:layout_width="0dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColorHint="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@null"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:text="@string/age"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAge"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:minHeight="55dp"
                    android:layout_height="wrap_content">

                    <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/ageEditText"
                        android:layout_width="0dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColorHint="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@null"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:hint="@string/age"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:text="@string/job"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/jobTitleCard"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:minHeight="55dp"
                    android:layout_height="wrap_content">

                    <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/jobTitle"
                        android:layout_width="0dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColorHint="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@null"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:hint="@string/job"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:textStyle="bold"
                android:text="@string/gender"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:id="@+id/genderHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/manCard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/femaleCard"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:minWidth="120dp"
                        android:id="@+id/containerMale"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:text="@string/man"
                            android:ellipsize="end"
                            android:textColor="@color/gray"
                            android:drawablePadding="6dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:id="@+id/valueMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/femaleCard"
                    app:layout_constraintStart_toEndOf="@+id/manCard"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:minWidth="120dp"
                        android:id="@+id/containerFemale"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:text="@string/female"
                            android:ellipsize="end"
                            android:textColor="@color/gray"
                            android:drawablePadding="6dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:id="@+id/valueFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>